K1J-405: Update to java 21, tomcat 10, gradle 8.10.2, Spring Framework 6.1, remove gradle-intyg-plugin and removed refdata as dependency. (#1152)